--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0",
+    "crypto-js": "^4.1.1",
+    "firebase": "^9.23.0",
     "node-fetch": "^2.6.11",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
